--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,12 @@ body {
   font-family: "Manrope", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 25px 30px;
 }
 
 .animated {
   -webkit-animation-duration: 1s;
-  animation-duration: 1s;
+  animation-duration: 0.5s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
@@ -103,16 +104,11 @@ body {
   animation-name: fadeInRight;
 }
 
-.fadeInUp {
-  -webkit-animation-name: fadeInUp;
-  animation-name: fadeInUp;
-}
-
-@-webkit-keyframes fadeInUpBig {
+@keyframes fadeInUp {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, 2000px, 0);
-    transform: translate3d(0, 2000px, 0);
+    -webkit-transform: translate3d(0, 10%, 0);
+    transform: translate3d(0, 10%, 0);
   }
 
   to {
@@ -120,4 +116,29 @@ body {
     -webkit-transform: none;
     transform: none;
   }
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+
+.animated.delay1 {
+  animation-delay: 0.1s;
+}
+
+.animated.delay2 {
+  animation-delay: 0.2s;
+}
+
+.animated.delay3 {
+  animation-delay: 0.3s;
+}
+
+.animated.delay4 {
+  animation-delay: 0.4s;
+}
+
+.animated.delay5 {
+  animation-delay: 0.5s;
 }
